wordpress/svc/mysql-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: mydb
  labels:
    app: mydb
spec:
  ports: 
  - name: mysql
    port: 3306
  clusterIP: None
  selector: 
    app: mydb
---
apiVersion: v1
kind: Service
metadata: 
  name: mydb-read
  labels: 
    app: mydb
spec: 
  ports: 
  - name: mysql
    port: 3306
  selector:
    app: mydb
