wordpress/svc/wp-ing.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata: 
  name: wordpress-ing
spec:
  rules: 
  - host:
